added html and styling

--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>html/css_quiz</title>
-</head>
-<body>
-<article>
-  <header class="title">
-    <h1>Yellow Dunk Cards</h1>
-  </header> 
-
-
-
-</article>
-
-</body>
+  <head>
+    <title>html/css_quiz</title>
+    <link rel="stylesheet" type="text/css" href="quiz.css">
+  </head>
+  <body>
+    <article>
+      <header id="pencil">
+        <h1>Pencil</h1>
+      </header>
+      <div>
+        <img src="https://pixabay.com/static/uploads/photo/2016/03/31/23/37/draw-1297723__180.png">
+        
+        <p class="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.</p>
+        
+        <p class="available">Available</p>
+      </div>
+      <div>
+        <header class="specs">
+        <h4>Specifications</h4>
+        </header>
+        <p class="dim">Size - 6.5" length, .27" thickness.</p>
+        <p class="dim">Weight - 5 grams.</p>
+        <footer>Specifications valid until 01/01/2020</footer>
+      </div>
+      <div>
+        <header class="specs">
+          <h4>Pricing</h4>
+        </header>
+        <p class="dim">Price per dozen - $0.60</p>
+        <p class="dim">Per box of 144 - $6.00</p>
+        <p class="dim">Per case of 12 boxes - $66.00</p>
+      </div>
+    </article>
+  </body>
 </html>
