--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <header class="specs">
           <h4>Specifications</h4>
         </header>
-        <p class="dim">Size - 6.5" length, .27" thickness.</p>
-        <p class="dim">Weight - 5 grams.</p>
+        <p class="dim">Size - 6.5" length, .27" thickness</p>
+        <p class="dim">Weight - 5 grams</p>
       <footer>Specifications valid until 01/01/2020</footer>
     </div>
     <div>
